--- a/Index.html
+++ b/Index.html
@@ -296,7 +296,7 @@
 <body>
   
   <header>
-    <h2 class="hui" ><a class="hui" href="New.html">GETOTP in @1secmail</a></h2>
+    <h2 class="hui" ><a class="hui" href="https://fuad161616.github.io/Sco/New.html">GETOTP in @1secmail</a></h2>
      
   </header>
  
